force-app/main/default/objects/Knowledge_Article__kav.object
<CustomObject>
    <fields>
        <fullName>SetAsTopTen__c</fullName>
        <formula>HYPERLINK(&quot;/apex/createNewTopTenArticle?FAQId=&quot;+ Id+&quot;&amp;articleNumber=&quot;+ ArticleNumber, &quot;Click here to set as top 10 articles&quot;, &quot;&quot;)</formula>
        <label>Set As Top Ten</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>This field is the Short Summary field from ask.monash</description>
        <label>Short Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Field to capture the Source of the Article</description>
        <label>Source</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>South_Africa_Staff__c</fullName>
        <description>Information relevant for South Africa staff</description>
        <label>South African Staff only</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>South_Africa__c</fullName>
        <description>Field to display information relevant for South African students</description>
        <label>South African Student &amp; Staff</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Staff_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Talent Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Standard_Text__c</fullName>
        <description>Standard Text Response</description>
        <label>Thank you for your enquiry.</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Superannuation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Superannuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WorkforceAnalytics__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workforce Analytics</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workforce_Policy_Procedure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workforce Policy &amp; Procedure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Workplace_Relations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Workplace Relations</label>
        <type>Checkbox</type>
    </fields>
    <label>Knowledge/Article</label>
    <listViews>
        <fullName>Academic_Progress_AP_MC_Knowledge</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Topics</field>
            <operation>includes</operation>
            <value>AP</value>
        </filters>
        <label>Academic Progress (AP) - MC Knowledge</label>
    </listViews>
    <listViews>
        <fullName>Admissions_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Admissions</value>
        </filters>
        <label>Admissions Articles</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Faculty</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>OFS</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Student_Recruitment_Admissions</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>eSolutions</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Alumni_Enquiries_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Alumni_Engagement</value>
        </filters>
        <label>All Alumni Enquiries Articles</label>
        <sharedTo>
            <group>Alumni_Engagement_Enquiry</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Draft_FAQ_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Owning_Org_Unit__c</columns>
        <columns>Category_One__c</columns>
        <columns>Category_Two__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>FAQ</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Draft FAQ Articles</label>
        <sharedTo>
            <group>Faculty_All</group>
            <role>Enrolment_Services</role>
            <role>Student_Finance</role>
            <roleAndSubordinatesInternal>Monash_Connect</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Draft_HR_FAQ_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>ASSIGNED_TO</columns>
        <columns>Faculty_Business_Unit__c</columns>
        <columns>Department_School__c</columns>
        <columns>Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>HR FAQ,HR Standard Text</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Draft HR FAQ Articles</label>
        <sharedTo>
            <roleAndSubordinatesInternal>CSO_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Director_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>HR_Talent_Systems</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Manager_HR</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Monash_HR</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Draft_Research_FAQ_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>Owning_Org_Unit__c</columns>
        <columns>Category_One__c</columns>
        <columns>Category_Two__c</columns>
        <columns>Review_Date__c</columns>
        <columns>ASSIGNEDTO_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Research_FAQ</value>
        </filters>
        <label>All Draft Research FAQ Articles</label>
        <sharedTo>
            <group>Monash_Research_Office</group>
            <role>Monash_Research_Office_MRO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Draft_Standard_Text_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>Owning_Org_Unit__c</columns>
        <columns>Category_One__c</columns>
        <columns>Category_Two__c</columns>
        <columns>Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Standard Text</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Draft Standard Text Articles</label>
        <sharedTo>
            <group>Faculty_All</group>
            <role>Enrolment_Services</role>
            <role>Student_Finance</role>
            <roleAndSubordinatesInternal>Monash_Connect</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Draft_articles_FAQ_Std</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>RECORDTYPE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>Owning_Org_Unit__c</columns>
        <columns>Category_One__c</columns>
        <columns>Category_Two__c</columns>
        <columns>Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.FAQ,Knowledge_Article__kav.Standard_Text</value>
        </filters>
        <label>All Draft Articles (FAQ &amp; Std Text)</label>
        <sharedTo>
            <group>Faculty_All</group>
            <roleAndSubordinatesInternal>Monash_Connect</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MC_Archived_articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>All MC Archived articles</label>
    </listViews>
    <listViews>
        <fullName>All_MC_Course_Advice_articles</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>CA</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>startsWith</operation>
            <value>[ALL]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[FUT]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[RET]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[CUR]</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All MC Course Advice articles</label>
    </listViews>
    <listViews>
        <fullName>All_MC_Currents_published_articles</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>CUR</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>startsWith</operation>
            <value>[ALL]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[FUT]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[CA]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[RET]</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All MC Currents published articles</label>
    </listViews>
    <listViews>
        <fullName>All_MC_Draft_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Approval_Group__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>VALIDATION_STATUS_ENUM</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All MC Draft Articles</label>
    </listViews>
    <listViews>
        <fullName>All_MC_Futures_published_articles</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>FUT</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>startsWith</operation>
            <value>[ALL]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[CUR]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[RET]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[CA]</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All MC Futures published articles</label>
    </listViews>
    <listViews>
        <fullName>All_MC_Published_Articles</fullName>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>Approval_Group__c</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <label>All MC Published Articles</label>
    </listViews>
    <listViews>
        <fullName>All_MC_Retention_articles</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>ARTICLE_NUMBER</columns>
        <columns>TITLE</columns>
        <columns>VALIDATION_STATUS_ENUM</columns>
        <columns>PUBLISH_STATUS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LANGUAGE</columns>
        <columns>LAST_PUBLISHED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Knowledge_Article__kav.Monash_Connect</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>contains</operation>
            <value>RET</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>startsWith</operation>
            <value>[ALL]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[CUR]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[FUT]</value>
        </filters>
        <filters>
            <field>TITLE</field>
            <operation>notContain</operation>
            <value>[CA]</value>
        </filters>
        <filters>
            <field>PUBLISH_STATUS</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All MC Retention articles</label>
    </listViews>
    <pluralLabel>Knowledge/Articles</pluralLabel>
    <recordTypes>
        <fullName>Admissions</fullName>
        <active>true</active>
        <description>Knowledge Articles for the Admissions team</description>
        <label>Admissions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Alumni_Engagement</fullName>
        <active>true</active>
        <description>Knowledge Articles for Alumni</description>
        <label>Alumni Engagement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_Information</fullName>
        <active>true</active>
        <label>Course Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_FAQ</fullName>
        <active>true</active>
        <label>HR FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>HR_Standard_Text</fullName>
        <active>true</active>
        <label>HR Standard Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>Knowledge</fullName>
        <active>true</active>
        <label>Knowledge</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monash_Adviser</fullName>
        <active>true</active>
        <label>Monash Adviser</label>
    </recordTypes>
    <recordTypes>
        <fullName>Monash_Connect</fullName>
        <active>true</active>
        <description>Internal staff knowledge articles</description>
        <label>Monash Connect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Research_FAQ</fullName>
        <active>true</active>
        <description>FAQs addressing issues for Researchers at Monash</description>
        <label>Research FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>SR_FAQ</fullName>
        <active>true</active>
        <label>SR FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Text</fullName>
        <active>true</active>
        <label>Standard Text</label>
    </recordTypes>
    <validationRules>
        <fullName>Cannot_change_URL</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(RecordType.DeveloperName = &apos;FAQ&apos;), 
NOT(RecordType.DeveloperName = &apos;HR_FAQ&apos;), 
NOT(RecordType.DeveloperName = &apos;HR_Standard_Text&apos;), 
NOT(RecordType.DeveloperName = &apos;Knowledge&apos;), 
NOT(RecordType.DeveloperName = &apos;Standard_Text&apos;), 

NOT( ISNEW() ), 
ISCHANGED(UrlName), 
Confirm_URL_Change__c = FALSE 

)</errorConditionFormula>
        <errorMessage>You have attempted to change the article URL, please tick Confirm URL 
Change checkbox to proceed with this change.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Planned_Publication_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	Automatically_Publish_On_Approval__c == false, 
	ISBLANK(Planned_Publication_Date__c),
	NOT($Permission.Allow_Validation_Status_Publish),
	NOT(RecordType.DeveloperName = &apos;Monash_Adviser&apos;),
	NOT(RecordType.DeveloperName = &apos;Course Information&apos;),
        NOT(RecordType.DeveloperName = &apos;Monash_Connect&apos;),
	NOT((RecordType.DeveloperName = &apos;SR_FAQ&apos;)),
	NOT(RecordType.DeveloperName = &apos;Knowledge&apos;),
    NOT(RecordType.DeveloperName = &apos;Alumni_Engagement&apos;),
	NOT(ISPICKVAL(Faculty_Business_Unit__c, &apos;Monash College&apos;))
)</errorConditionFormula>
        <errorMessage>Please select either &quot;Automatically Publish On Approval&quot; or specify a &quot;Planned publication date&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Publication_Date_not_set</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	NOT(RecordType.DeveloperName = &apos;Monash_Adviser&apos;),
	NOT(RecordType.DeveloperName = &apos;Course Information&apos;),
	NOT(RecordType.DeveloperName = &apos;SR_FAQ&apos;),
	NOT(RecordType.DeveloperName = &apos;Knowledge&apos;),
    NOT(RecordType.DeveloperName = &apos;Alumni_Engagement&apos;),
        NOT(RecordType.DeveloperName = &apos;Monash_Connect&apos;),
	NOT($Permission.Allow_Validation_Status_Publish),
	OR(
		AND(
			ISBLANK(Planned_Publication_Date__c), 
			Automatically_Publish_On_Approval__c = false, 
			ISPICKVAL( ValidationStatus , &quot;Draft&quot;)
		),
		AND(
			!ISBLANK(Planned_Publication_Date__c), 
			Automatically_Publish_On_Approval__c = True, 
			ISPICKVAL( ValidationStatus , &quot;Draft&quot;)
		)
	),
	NOT(ISPICKVAL(Faculty_Business_Unit__c, &apos;Monash College&apos;))
)</errorConditionFormula>
        <errorMessage>Please set a &apos;Publication Date&apos; or select &apos;Automatically Publish on Approval&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Removal_Date_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Permission.Allow_Validation_Status_Publish),(IsBlank(Proposed_Removal_Date__c) &amp;&amp; (IsPickval( Proposed_Removal_Status__c,&quot;Archive&quot;) || IsPickval( Proposed_Removal_Status__c,&quot;Draft&quot;))))</errorConditionFormula>
        <errorMessage>Please select Proposed Removal Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Removal_Status_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Permission.Allow_Validation_Status_Publish),(!IsBlank(Proposed_Removal_Date__c) &amp;&amp; (!IsPickval( Proposed_Removal_Status__c,&quot;Archive&quot;) &amp;&amp; !IsPickval( Proposed_Removal_Status__c,&quot;Draft&quot;))))</errorConditionFormula>
        <errorMessage>Please select Proposed Removal Status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Review_Date_cant_be_less_than_today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Permission.Allow_Validation_Status_Publish),(Review_Date__c &lt;TODAY()))</errorConditionFormula>
        <errorMessage>Review date cannot be less than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Status_Draft</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Permission.Allow_Validation_Status_Publish),IsChanged(ValidationStatus) &amp;&amp; !IsPickVal(ValidationStatus,&quot;Draft&quot;)|| 
(!IsChanged(ValidationStatus) &amp;&amp; !IsPickVal(ValidationStatus,&quot;Draft&quot;)))</errorConditionFormula>
        <errorMessage>Please change the Validation Status to &apos;Draft&apos; before submitting FAQ for approval</errorMessage>
    </validationRules>
</CustomObject>